respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Fee__c.object
<CustomObject>
    <description>Object used to store all transport fees recorded in the system.</description>
    <fields>
        <fullName>Account_for_API__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account for API</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier, Customer, Supply Chain Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services Rates (Account for API)</relationshipLabel>
        <relationshipName>Services_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_for__c</fullName>
        <label>Account for</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier, Customer, Supply Chain Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services Rates (Account for)</relationshipLabel>
        <relationshipName>Fees_Account_for</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_to_Purchase_Incoterms__c</fullName>
        <label>Applicable to Purchase Incoterms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>DAP</fullName>
                </value>
                <value>
                    <fullName>DAT</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicable_to_Sales_Incoterms__c</fullName>
        <label>Applicable to Sales Incoterms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>Ex Works</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
                <value>
                    <fullName>DDU</fullName>
                </value>
                <value>
                    <fullName>DEQ</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>DAF</fullName>
                </value>
                <value>
                    <fullName>DES</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>C+F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preferential</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bunker_Adjustment_Factor_BAF_Cont__c</fullName>
        <label>Bunker Adjustment Factor (BAF) / Cont.</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BuyPriceMax__c</fullName>
        <description>precio máximo de compra</description>
        <label>Buy Price Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buy_Rate_Number__c</fullName>
        <label>Buy Rate Number</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Buy Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carrier_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Carrier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services Rates (Carrier Account)</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clasificacion_ruta__c</fullName>
        <label>Clasificacion(ruta)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concept_1__c</fullName>
        <label>Concept 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concept_2__c</fullName>
        <label>Concept 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concept_3__c</fullName>
        <label>Concept 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container Type</label>
        <referenceTo>Container_Type__c</referenceTo>
        <relationshipLabel>Services Rates</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Concept_1__c</fullName>
        <label>Cost Concept 1</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Concept_2__c</fullName>
        <label>Cost Concept 2</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Concept_3__c</fullName>
        <label>Cost Concept 3</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country_of_Discharge__c</fullName>
        <formula>Route__r.Country_of_Discharge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Discharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Load__c</fullName>
        <formula>Route__r.Country_of_Load__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Load</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Buy_Price__c</fullName>
        <label>Currency Buy Price</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomRate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tarifario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dependent on &quot;Port of Load / Discharge&quot;</inlineHelpText>
        <label>Pickup / Delivery Zone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Delivery_Zone__c.Port_Airport__c</field>
                <operation>equals</operation>
                <valueField>$Source.Port_Airport__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Delivery_Zone__c</referenceTo>
        <relationshipLabel>Services Rates</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Es_flete__c</fullName>
        <formula>if
(
OR
(
SAP_Service_Type__r.Code__c = &apos;FTN&apos;,
SAP_Service_Type__r.Code__c = &apos;FTNSL&apos;,
SAP_Service_Type__r.Code__c = &apos;PTO2&apos;,
SAP_Service_Type__r.Code__c = &apos;PTOSL&apos;,
SAP_Service_Type__r.Code__c = &apos;PTO3&apos;,
SAP_Service_Type__r.Code__c = &apos;FISL&apos;,
SAP_Service_Type__r.Code__c = &apos;IT&apos;,
SAP_Service_Type__r.Code__c = &apos;SL01&apos;
)
,true
,false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Es flete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN_Average_Cost__c</fullName>
        <label>FN Average Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FN_Average_Trips__c</fullName>
        <label>FN - Average Trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN_Target_Cost__c</fullName>
        <label>FN - Target Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Category__c</fullName>
        <inlineHelpText>Be aware that if you change the values of this picklist the hard corde of the Import-Export PDF quote must also be changed by our end.</inlineHelpText>
        <label>Rate Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Road Freights</fullName>
                    <default>true</default>
                    <label>Road Freights</label>
                </value>
                <value>
                    <fullName>Other Service Charges</fullName>
                </value>
                <value>
                    <fullName>Sea Freights</fullName>
                </value>
                <value>
                    <fullName>Air Freights</fullName>
                </value>
                <value>
                    <fullName>POL Charges</fullName>
                </value>
                <value>
                    <fullName>POD Charges</fullName>
                </value>
                <value>
                    <fullName>Drayages</fullName>
                </value>
                <value>
                    <fullName>Mayoreo</fullName>
                </value>
                <value>
                    <fullName>Tarimas</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>IMPAK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Description__c</fullName>
        <label>Rate Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sell Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>% Service Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fuel_Over__c</fullName>
        <label>Fuel Over</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel__c</fullName>
        <label>Fuel (Currency/Kg)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GroupGVS</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_Route__c</fullName>
        <formula>CASESAFEID(Route__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quoted_Marketplace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import-Export Quoted (Marketplace)</label>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Freight Quotes (Marketplace)</relationshipLabel>
        <relationshipName>Freight_Quotes_Marketplace</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Description__c</fullName>
        <formula>UPPER(Fee_Description__c+&apos;|&apos;+Distance__c+&apos;|&apos;+Volume__c+&apos;|&apos;+Weight__c)+&apos;|&apos;+Route__r.Port_Airport_of_Load__c+&apos;|&apos;+Route__r.Port_Airport_of_Discharge__c+&apos;|&apos;+Carrier_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key_Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Drayages__c</fullName>
        <formula>UPPER(TEXT(Fee_Category__c)+&apos;|&apos;+TEXT(Rate_Type__c)+&apos;|&apos;+Modality__c)+&apos;|&apos;+Container_Type__c+&apos;|&apos;+Port_Airport__c+&apos;|&apos;+Delivery_Zone__c+&apos;|&apos;+Carrier_Account__c</formula>
        <label>Key_Drayages</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>IF(TEXT(Fee_Category__c) == &apos;Warehouse&apos;, UPPER(Name+&apos;|&apos;+TEXT(Fee_Category__c)+&apos;|&apos;+TEXT(Rate_Type__c))+&apos;|&apos;+Route__r.Port_Airport_of_Load__c+&apos;|&apos;+Route__r.Port_Airport_of_Discharge__c, UPPER(TEXT(Fee_Category__c)+&apos;|&apos;+TEXT(Rate_Type__c))+&apos;|&apos;+Container_Type__c+&apos;|&apos;+Route__r.Port_Airport_of_Load__c+&apos;|&apos;+Route__r.Port_Airport_of_Discharge__c+&apos;|&apos;+Carrier_Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOT_Url__c</fullName>
        <label>LOT Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LOT__c</fullName>
        <formula>IF( LOT_Url__c!=null,HYPERLINK( MID($Api.Enterprise_Server_URL_300, FIND(&apos;/&apos;,$Api.Enterprise_Server_URL_300,9),FIND( &apos;/services&apos;, $Api.Enterprise_Server_URL_300)- FIND(&apos;/&apos;,$Api.Enterprise_Server_URL_300,9))+LOT_Url__c , IMAGE(&apos;/img/icon/contracts32.png&apos;,&apos;Document&apos;,32,32),&apos;_blank&apos;),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maestro_de_Rutas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maestro de Rutas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketplace_Ranking__c</fullName>
        <label>Marketplace Ranking</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Allocation__c</fullName>
        <label>Master Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customs</fullName>
                </value>
                <value>
                    <fullName>Port</fullName>
                </value>
                <value>
                    <fullName>Shipping Line</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>PRCC</fullName>
                </value>
                <value>
                    <fullName>Depot</fullName>
                </value>
                <value>
                    <fullName>Forwarding Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Release Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Kgs__c</fullName>
        <label>+ Kgs</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_M3__c</fullName>
        <label>+ M3</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modality__c</fullName>
        <label>Modality</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moneda__c</fullName>
        <label>Moneda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negociacion__c</fullName>
        <label>Negociacion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negotiated_Rate__c</fullName>
        <label>Negotiated Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negotiated_Volume__c</fullName>
        <label>Negotiated Volume</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negotiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negotiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Normal__c</fullName>
        <label>Normal</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_SapDevolucion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para identificar si la línea es para una devolución. Se envía a SAP</description>
        <label>Devolución</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pallet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pallet Type</label>
        <referenceTo>Pallet_Type__c</referenceTo>
        <relationshipLabel>Services Rates</relationshipLabel>
        <relationshipName>Services_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peak_Season_Surcharge_PSS_Cont__c</fullName>
        <label>Peak Season Surcharge (PSS) / Cont.</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plane__c</fullName>
        <label>Plane</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Port of Load / Discharge</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Services Rates</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Port_Airport_of_Discharge__c</fullName>
        <formula>Route__r.Port_Airport_of_Discharge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site of Discharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Airport_of_Load__c</fullName>
        <formula>Route__r.Port_Airport_of_Load__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site of Load</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferential__c</fullName>
        <formula>IF( ISPICKVAL(Application__c, &apos;Preferential&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RateNameType__c</fullName>
        <label>RateNameType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RateNameType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Names_List__c</fullName>
        <label>Rate Names List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sea Freight</fullName>
                </value>
                <value>
                    <fullName>Air Freight</fullName>
                </value>
                <value>
                    <fullName>Road Freight</fullName>
                </value>
                <value>
                    <fullName>Multimodal Freight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>Per Kg</fullName>
                </value>
                <value>
                    <fullName>Per M3</fullName>
                </value>
                <value>
                    <fullName>Per Container</fullName>
                </value>
                <value>
                    <fullName>Per TON</fullName>
                </value>
                <value>
                    <fullName>Per Pallet</fullName>
                </value>
                <value>
                    <fullName>Per Day</fullName>
                </value>
                <value>
                    <fullName>% of Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Over__c</fullName>
        <label>Risk Over</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk (Currency/Kg)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route_Info__c</fullName>
        <label>Route Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Carrier_Line_Load_Point__c</referenceTo>
        <relationshipLabel>Services Rates</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Service_Type_Buy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP Service Type Buy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Group__c</field>
                <operation>equals</operation>
                <valueField>SAP_Service_Type__c.Group__c</valueField>
            </filterItems>
            <filterItems>
                <field>SAP_Service_Type__c.Activo__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Service_Type__c</referenceTo>
        <relationshipLabel>Services Rates (SAP Service Type Buy)</relationshipLabel>
        <relationshipName>Services_Rates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Service_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP Service Type Sell</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Group__c</field>
                <operation>equals</operation>
                <valueField>SAP_Service_Type__c.Group__c</valueField>
            </filterItems>
            <filterItems>
                <field>SAP_Service_Type__c.Activo__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Service_Type__c</referenceTo>
        <relationshipLabel>Services Rates</relationshipLabel>
        <relationshipName>Services_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SST_Porcentaje_de_division__c</fullName>
        <description>Este campo solo se va completar cuando se genera una división de línea. Será de manera automática</description>
        <label>Porcentaje de división</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SST_Sociedad__c</fullName>
        <description>Este campo consulta el valor de Sociedad dentro del SAP SERVICE TYPE relacionado al Service Rate</description>
        <formula>TEXT( SAP_Service_Type__r.SST_Sociedad__c )</formula>
        <label>Sociedad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sap_Comp_Code__c</fullName>
        <label>Sap Comp Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Quoted_Marketplace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Quoted (Marketplace)</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Freight Quotes (Marketplace)</relationshipLabel>
        <relationshipName>Services_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipments_Program_Quoted_Marketplace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipments Program Quoted (Marketplace)</label>
        <referenceTo>Shipment_Program__c</referenceTo>
        <relationshipLabel>Services Rates</relationshipLabel>
        <relationshipName>Services_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_of_Discharge__c</fullName>
        <formula>Route__r.State_of_Discharge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State of Discharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_Load__c</fullName>
        <formula>Route__r.State_of_Load__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State of Load</label>
        <type>Text</type>
    </fields>
</CustomObject>